# documentation

./: .gitignore  PRD-RH-Linux.md  production-ready v2.md
rh-linux-docs-agent/: .env.example  .gitignore  CHANGELOG.md  KNOWN_LIMITATIONS.md  PRD-RH-Linux-v2.md  README.md  RUNBOOK.md  pyproject.toml
rh-linux-docs-agent/scripts/: chunk_docs.py  cleanup_html.py  eval_retrieval.py  index_docs.py  ingest.py  parse_docs.py  qa_demo.py  qa_showcase.py  run_api.py  scrape.py  search_cli.py  search_demo.py  start_web.py
rh-linux-docs-agent/src/rh_linux_docs_agent/: __init__.py  config.py
rh-linux-docs-agent/src/rh_linux_docs_agent/agent/: __init__.py  agent.py  app.py  qa.py  tools.py  version_resolver.py
rh-linux-docs-agent/src/rh_linux_docs_agent/api/: __init__.py  app.py
rh-linux-docs-agent/src/rh_linux_docs_agent/chunker/: __init__.py  models.py  splitter.py
rh-linux-docs-agent/src/rh_linux_docs_agent/indexer/: __init__.py  embedder.py  schema.py  store.py
rh-linux-docs-agent/src/rh_linux_docs_agent/parser/: __init__.py  html_parser.py  models.py
rh-linux-docs-agent/src/rh_linux_docs_agent/scraper/: __init__.py  discovery.py  fetcher.py
rh-linux-docs-agent/src/rh_linux_docs_agent/search/: __init__.py  hybrid.py  reranker.py  retriever.py
rh-linux-docs-agent/tests/: __init__.py  test_api.py  test_chunker.py  test_parser.py  test_regression.py
