[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rh-linux-docs-agent"
version = "0.1.0"
description = "RAG system for Red Hat Enterprise Linux documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # HTTP client — downloads web pages with async support
    "httpx>=0.27.0",
    # HTML parser — extracts content from RHEL docs HTML structure
    "beautifulsoup4>=4.12.0",
    # Faster HTML parsing backend for BeautifulSoup
    "lxml>=5.0.0",
    # Embedded vector database — stores chunks + vectors as local files, no server needed
    "lancedb>=0.17.0",
    # AI embedding model runner — converts text to 384-dim vectors using BGE-small
    "sentence-transformers>=3.0.0",
    # AI agent framework — orchestrates the LLM + tool calls
    "pydantic-ai[openai]>=0.0.14",
    # Config management — loads settings from .env files with type validation
    "pydantic-settings>=2.5.0",
    # Token counter — counts tokens like an LLM does (used by the chunker)
    "tiktoken>=0.7.0",
    # CLI framework — builds nice command-line interfaces with --flags
    "typer>=0.12.0",
    # Terminal output — colors, tables, progress bars in the terminal
    "rich>=13.7.0",
    # Apache Arrow — columnar data format required by LanceDB
    "pyarrow>=17.0.0",
    # Full-text search engine — powers BM25 keyword search in LanceDB
    "tantivy>=0.22.0",
    # Web UI — auto-generates a chat interface for the agent
    "gradio>=4.44.0",
    # Async utilities
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rh_linux_docs_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
